[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/Globals/TransitionNoise.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Effects/Noise 1-2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Effects/Noise 2-2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Effects/Noise 3-2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Effects/Noise 4-2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Effects/Noise 5-2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Effects/Noise 6-2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Effects/Noise 7-2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Effects/Noise 8-2.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Effects/Noise 9-2.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Effects/Noise 10-2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Effects/Noise 11-2.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Effects/Noise 12-2.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Effects/Noise 13-2.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Effects/Noise 15-2.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Effects/Noise 14-2.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Effects/Noise 16-2.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[node name="TransitionNoise" type="CanvasLayer"]

layer = 8
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="TimerActive" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 1.5
one_shot = true
autostart = false

[node name="Noise" type="AnimatedSprite" parent="." index="1"]

frames = SubResource( 1 )
animation = "default"
frame = 15
playing = true
centered = false
_sections_unfolded = [ "Visibility" ]

[node name="Noise2" type="AnimatedSprite" parent="." index="2"]

frames = SubResource( 1 )
animation = "default"
frame = 15
playing = true
centered = false

[node name="Noise3" type="AnimatedSprite" parent="." index="3"]

frames = SubResource( 1 )
animation = "default"
frame = 15
playing = true
centered = false

[node name="Noise4" type="AnimatedSprite" parent="." index="4"]

frames = SubResource( 1 )
animation = "default"
frame = 15
playing = true
centered = false

[node name="Noise5" type="AnimatedSprite" parent="." index="5"]

frames = SubResource( 1 )
animation = "default"
frame = 15
playing = true
centered = false

[node name="Noise6" type="AnimatedSprite" parent="." index="6"]

frames = SubResource( 1 )
animation = "default"
frame = 15
playing = true
centered = false

[node name="Noise7" type="AnimatedSprite" parent="." index="7"]

frames = SubResource( 1 )
animation = "default"
frame = 15
playing = true
centered = false

[node name="Noise8" type="AnimatedSprite" parent="." index="8"]

frames = SubResource( 1 )
animation = "default"
frame = 15
playing = true
centered = false

[node name="Noise9" type="AnimatedSprite" parent="." index="9"]

frames = SubResource( 1 )
animation = "default"
frame = 15
playing = true
centered = false

[node name="Noise10" type="AnimatedSprite" parent="." index="10"]

frames = SubResource( 1 )
animation = "default"
frame = 15
playing = true
centered = false
_sections_unfolded = [ "Material", "Visibility" ]

[node name="Noise11" type="AnimatedSprite" parent="." index="11"]

frames = SubResource( 1 )
animation = "default"
frame = 15
playing = true
centered = false

[node name="Noise12" type="AnimatedSprite" parent="." index="12"]

frames = SubResource( 1 )
animation = "default"
frame = 15
playing = true
centered = false

[node name="Noise13" type="AnimatedSprite" parent="." index="13"]

frames = SubResource( 1 )
animation = "default"
frame = 15
playing = true
centered = false

[node name="Noise14" type="AnimatedSprite" parent="." index="14"]

frames = SubResource( 1 )
animation = "default"
frame = 15
playing = true
centered = false

[node name="Noise15" type="AnimatedSprite" parent="." index="15"]

frames = SubResource( 1 )
animation = "default"
frame = 15
playing = true
centered = false

[node name="Noise16" type="AnimatedSprite" parent="." index="16"]

frames = SubResource( 1 )
animation = "default"
frame = 15
playing = true
centered = false

[node name="Noise17" type="AnimatedSprite" parent="." index="17"]

frames = SubResource( 1 )
animation = "default"
frame = 15
playing = true
centered = false

[node name="Noise18" type="AnimatedSprite" parent="." index="18"]

frames = SubResource( 1 )
animation = "default"
frame = 15
playing = true
centered = false

[connection signal="timeout" from="TimerActive" to="." method="_on_TimerActive_timeout"]


